Fix for attachment preview location on mobile

--- a/webapp/sass/responsive/_tablet.scss
+++ b/webapp/sass/responsive/_tablet.scss
@@ -32,9 +32,9 @@
         form {
             padding: .5em 0 0;
         }
-
+        
         .post-create-footer {
-            padding: 0 45px;
+            padding: 0 45px 0 8px;
 
             .post-error {
                 position: relative;
